--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Shubh New Website</title>
-  <link rel="stylesheet" href="C:/Users/Shubham Chotaliya/OneDrive/Desktop/web development/cssNew/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
